test connecting to render.com

--- a/add-players.html
+++ b/add-players.html
@@ -2932,7 +2932,8 @@
             }
 
             $.ajax({
-                url: "https://football-match3-api.herokuapp.com/getAllClubsData",
+                url: "https://test-qqw1.onrender.com/getAllClubsData",
+                // url: "https://football-match3-api.herokuapp.com/getAllClubsData",
                 type: 'GET',
                 contentType: 'application/json'
             }).then(res => {
