url for adding and editing teams and players changed (old was heroku, new is on render)

--- a/add-players.html
+++ b/add-players.html
@@ -3075,7 +3075,7 @@
             console.log(allPlayers);
             // return;    //uncomment if testing - prevent recording in DB 
             $.ajax({
-                url: "https://football-match3-api.herokuapp.com/addClub",
+                url: " https://test-qqw1.onrender.com/addClub",
                 type: 'POST',
                 contentType: 'application/json',
                 data: JSON.stringify(
