player names are visualized on poiner down and hold

--- a/add-players.html
+++ b/add-players.html
@@ -1586,7 +1586,7 @@
                         substitute
                     </td>
                     <td>
-                        <input value="false" type="text" disabled>
+                        <input value="true" type="text" disabled>
                     </td>
                 </tr>
             </table>
@@ -1739,7 +1739,7 @@
                         substitute
                     </td>
                     <td>
-                        <input value="false" type="text" disabled>
+                        <input value="true" type="text" disabled>
                     </td>
                 </tr>
             </table>
@@ -1892,7 +1892,7 @@
                         substitute
                     </td>
                     <td>
-                        <input value="false" type="text" disabled>
+                        <input value="true" type="text" disabled>
                     </td>
                 </tr>
             </table>
@@ -2045,7 +2045,7 @@
                         substitute
                     </td>
                     <td>
-                        <input value="false" type="text" disabled>
+                        <input value="true" type="text" disabled>
                     </td>
                 </tr>
             </table>
@@ -2198,7 +2198,7 @@
                         substitute
                     </td>
                     <td>
-                        <input value="false" type="text" disabled>
+                        <input value="true" type="text" disabled>
                     </td>
                 </tr>
             </table>
@@ -2351,7 +2351,7 @@
                         substitute
                     </td>
                     <td>
-                        <input value="false" type="text" disabled>
+                        <input value="true" type="text" disabled>
                     </td>
                 </tr>
             </table>
